[bugfix] nav on tablet

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,10 +6,9 @@
     .nav-ul {
         float:right;
     }
-
     .navbar-nav li>a {
         font-size:14px;
-
+        padding:17px 8px 17px 8px;
     }
     #navbar{
         margin-top:30px;
@@ -18,9 +17,7 @@
         width:120px;
         max-height:100px;
         margin:5px;
-
     }
-
 }
 @media(max-width:768px){
     .main-logo-in-mobile{
